--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
+    "@headlessui/react": "^1.7.18",
     "@phosphor-icons/react": "^2.0.10",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-scroll": "^1.8.7",
